--- a/template/package.json
+++ b/template/package.json
@@ -1,19 +1,25 @@
 {
   "name": "template-api",
   "version": "1.0.0",
+  "port": 3000,
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --ext js,ts --exec 'ts-node src/start.ts'",
+    "dev:win": "nodemon --ext js,ts --exec ts-node src/start.ts",
     "start": "ts-node ./src/start.ts --env production",
-    "local": "nodemon --ext js,ts --exec 'ts-node src/start.ts  --env local'",
     "test": "npm run dev",
     "build": "echo 'build'",
     "eject": "echo 'eject'"
   },
+  "nodemonConfig": {
+    "ignore": [
+    ]
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
