--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,19 +1,27 @@
-.idea
-package-lock.json
-yarn.lock
-node_modules
-/node_modules/
-/.env
-/yarn-error.log
-/.data/
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build/
 /lib/
 /dist/
 /cache/
-.DS_Store
-logs
-/logs
-logs_swap.zip
-cache
+/logs/
+/output/
+/build
+/lib
+/dist
 /cache
+/logs
+/output
 
-output
+# misc
+.idea
+.DS_Store
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
