--- a/template/package.json
+++ b/template/package.json
@@ -28,11 +28,9 @@
     "@types/express-session": "^1.17.9",
     "@types/node": "^20.8.9",
     "@types/node-cron": "^3.0.11",
-    "@types/querystringify": "^2.0.2",
     "cross-env": "^7.0.3",
     "node-cron": "^3.0.3",
     "nodemon": "^2.0.22",
-    "reflect-metadata": "^0.1.13",
     "require-all": "^3.0.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.2",
@@ -46,11 +44,11 @@
     "ethers": "^5.7.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "lia-common": "^1.0.8",
+    "lia-decorators": "^1.0.0",
     "lia-mysql": "^1.0.1",
     "lia-redis": "^1.0.0",
-    "lia-stack": "^1.0.6",
-    "querystringify": "^2.2.0"
-
+    "lia-stack": "^1.0.6"
   },
   "eslintConfig": {
     "extends": []
