--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,3 +1,5 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
 /node_modules
 
@@ -17,6 +19,7 @@
 /cache
 /logs
 /output
+
 
 # misc
 .idea
